# RogueEmblemGame

./: README.md
CLionProject/: CMakeLists.txt
CLionProject/cmake_modules/: FindSFML.cmake
CLionProject/src/: CMakeLists.txt  GameManager.cpp  GameManager.h  System.h  main.cpp
CLionProject/src/GameClasses/: Equipment.cpp  Equipment.h  GameCharacter.cpp  GameCharacter.h  GameMap.cpp  GameMap.h  GameObject.h  Item.h  MovementHandler.cpp  MovementHandler.h  Options.h  PlayerControlledCharacter.cpp  PlayerControlledCharacter.h  Stats.h  Tile.cpp  Tile.h  Weapon.h
CLionProject/src/GameClasses/Factories/: CharacterFactory.h  EnemyFactory.cpp  EnemyFactory.h  ItemFactory.cpp  ItemFactory.h  PlayerFactory.cpp  PlayerFactory.h
CLionProject/src/GameClasses/GameObjectHierarchy/: ClosestPlayerBehaviour.cpp  ClosestPlayerBehaviour.h  Enemy.cpp  Enemy.h  EnemyBehaviour.cpp  EnemyBehaviour.h  GameCharacter.cpp  GameCharacter.h  GameObject.cpp  GameObject.h  PlayerControlledCharacter.cpp  PlayerControlledCharacter.h  WeakestPlayerBehaviour.cpp  WeakestPlayerBehaviour.h
CLionProject/src/GameClasses/InventoryManagement/: Equipment.cpp  Equipment.h  Inventory.cpp  Inventory.h  Item.cpp  Item.h  Weapon.cpp  Weapon.h
CLionProject/src/Resources/: Animation.cpp  Animation.h  Resource.h  Texture.cpp  Texture.h
CLionProject/src/States/: EndGameState.cpp  EndGameState.h  EnemyActionState.cpp  EnemyActionState.h  EnemyTurnState.cpp  EnemyTurnState.h  EnterLevelState.cpp  EnterLevelState.h  FightState.cpp  FightState.h  FreeMovementState.cpp  FreeMovementState.h  GameState.h  MoveHeroState.cpp  MoveHeroState.h  OnMapState.cpp  OnMapState.h  SelectActionState.cpp  SelectActionState.h  SelectAttackState.cpp  SelectAttackState.h
CLionProject/src/Systems/: GameLogicSystem.cpp  GameLogicSystem.h  Message.h  RenderSystem.cpp  RenderSystem.h  ResourceSystem.cpp  ResourceSystem.h  SoundSystem.cpp  SoundSystem.h  System.h
CLionProject/src/Utils/: AStar.cpp  AStar.h  HUDHelper.cpp  HUDHelper.h  InputHelper.cpp  InputHelper.h  Movement.h  Observer.h  Subject.cpp  Subject.h  VirtualKey.h  constants.h  utilityFunctions.cpp  utilityFunctions.h
CLionProject/tests/: CMakeLists.txt
CLionProject/tests/test_src/: astarTest.cpp  characterCombatTest.cpp  factoryTest.cpp  mapTests.cpp  resourceSystemTest.cpp  resourceTests.cpp  runTests.cpp
